--- a/src/app/pages/pokemon-detail/pokemon-detail.page.html
+++ b/src/app/pages/pokemon-detail/pokemon-detail.page.html
@@ -1,13 +1,38 @@
-<ion-header [translucent]="true">
+<ion-header>
   <ion-toolbar>
-    <ion-title>pokemon-detail</ion-title>
+    <ion-title>{{ pokemon?.name | titlecase }}</ion-title>
   </ion-toolbar>
 </ion-header>
 
-<ion-content [fullscreen]="true">
-  <ion-header collapse="condense">
-    <ion-toolbar>
-      <ion-title size="large">pokemon-detail</ion-title>
-    </ion-toolbar>
-  </ion-header>
+<ion-content *ngIf="pokemon">
+  <ion-card>
+    <img [src]="pokemon.sprites.front_default" alt="sprite" />
+    <ion-card-header>
+      <ion-card-title>{{ pokemon.name | titlecase }}</ion-card-title>
+    </ion-card-header>
+    <ion-card-content>
+      <p><strong>ID:</strong> {{ pokemon.id }}</p>
+      <p><strong>Altura:</strong> {{ pokemon.height / 10 }} m</p>
+      <p><strong>Peso:</strong> {{ pokemon.weight / 10 }} kg</p>
+      <p><strong>Tipo(s):</strong> {{ typesList }}</p>
+      <p><strong>Habilidades:</strong> {{ abilitiesList }}</p>
+      <p><strong>Experiência base:</strong> {{ pokemon.base_experience }}</p>
+      <ion-button expand="full" color="warning" (click)="toggleFavorite(pokemon.name)">
+        {{ isFavorite(pokemon.name) ? 'Remover dos Favoritos' : 'Adicionar aos Favoritos' }}
+      </ion-button>
+      <ion-grid>
+        <ion-row>
+          <ion-col size="4">
+            <img [src]="pokemon.sprites.front_shiny" alt="shiny" />
+          </ion-col>
+          <ion-col size="4">
+            <img [src]="pokemon.sprites.back_default" alt="back" />
+          </ion-col>
+          <ion-col size="4">
+            <img [src]="pokemon.sprites.back_shiny" alt="back shiny" />
+          </ion-col>
+        </ion-row>
+      </ion-grid>
+    </ion-card-content>
+  </ion-card>
 </ion-content>
