--- a/src/app/pages/pokemon-detail/pokemon-detail.page.html
+++ b/src/app/pages/pokemon-detail/pokemon-detail.page.html
@@ -1,38 +1,74 @@
 <ion-header>
   <ion-toolbar>
-    <ion-title>{{ pokemon?.name | titlecase }}</ion-title>
+    <ion-buttons slot="start">
+      <ion-back-button defaultHref="/home"></ion-back-button>
+    </ion-buttons>
+    <ion-title>Detalhes</ion-title>
   </ion-toolbar>
 </ion-header>
 
-<ion-content *ngIf="pokemon">
+<ion-content *ngIf="pokemon" class="ion-padding">
   <ion-card>
-    <img [src]="pokemon.sprites.front_default" alt="sprite" />
     <ion-card-header>
-      <ion-card-title>{{ pokemon.name | titlecase }}</ion-card-title>
+      <ion-card-title class="ion-text-center">
+        {{ pokemon.name | titlecase }}
+      </ion-card-title>
     </ion-card-header>
+
     <ion-card-content>
-      <p><strong>ID:</strong> {{ pokemon.id }}</p>
-      <p><strong>Altura:</strong> {{ pokemon.height / 10 }} m</p>
-      <p><strong>Peso:</strong> {{ pokemon.weight / 10 }} kg</p>
-      <p><strong>Tipo(s):</strong> {{ typesList }}</p>
-      <p><strong>Habilidades:</strong> {{ abilitiesList }}</p>
-      <p><strong>Experiência base:</strong> {{ pokemon.base_experience }}</p>
-      <ion-button expand="full" color="warning" (click)="toggleFavorite(pokemon.name)">
-        {{ isFavorite(pokemon.name) ? 'Remover dos Favoritos' : 'Adicionar aos Favoritos' }}
-      </ion-button>
       <ion-grid>
         <ion-row>
-          <ion-col size="4">
-            <img [src]="pokemon.sprites.front_shiny" alt="shiny" />
+          <ion-col size="6">
+            <ion-img [src]="pokemon.sprites.front_default"></ion-img>
+            <p class="ion-text-center">Frente</p>
           </ion-col>
-          <ion-col size="4">
-            <img [src]="pokemon.sprites.back_default" alt="back" />
+          <ion-col size="6">
+            <ion-img [src]="pokemon.sprites.back_default"></ion-img>
+            <p class="ion-text-center">Costas</p>
           </ion-col>
-          <ion-col size="4">
-            <img [src]="pokemon.sprites.back_shiny" alt="back shiny" />
+        </ion-row>
+        <ion-row>
+          <ion-col size="6">
+            <ion-img [src]="pokemon.sprites.front_shiny"></ion-img>
+            <p class="ion-text-center">Shiny Frente</p>
+          </ion-col>
+          <ion-col size="6">
+            <ion-img [src]="pokemon.sprites.back_shiny"></ion-img>
+            <p class="ion-text-center">Shiny Costas</p>
           </ion-col>
         </ion-row>
       </ion-grid>
+
+      <ion-list>
+        <ion-item>
+          <ion-label><strong>Tipos:</strong></ion-label>
+          <ion-text>{{ typesList }}</ion-text>
+        </ion-item>
+        <ion-item>
+          <ion-label><strong>Habilidades:</strong></ion-label>
+          <ion-text>{{ abilitiesList }}</ion-text>
+        </ion-item>
+        <ion-item>
+          <ion-label><strong>Altura:</strong></ion-label>
+          <ion-text>{{ pokemon.height }}</ion-text>
+        </ion-item>
+        <ion-item>
+          <ion-label><strong>Peso:</strong></ion-label>
+          <ion-text>{{ pokemon.weight }}</ion-text>
+        </ion-item>
+        <ion-item>
+          <ion-label><strong>Experiência Base:</strong></ion-label>
+          <ion-text>{{ pokemon.base_experience }}</ion-text>
+        </ion-item>
+      </ion-list>
+
+      <ion-button
+        expand="block"
+        color="warning"
+        (click)="toggleFavorite(pokemon.name)"
+      >
+        {{ isFavorite(pokemon.name) ? '★ Remover dos Favoritos' : '☆ Adicionar aos Favoritos' }}
+      </ion-button>
     </ion-card-content>
   </ion-card>
 </ion-content>
