--- a/src/theme/variables.scss
+++ b/src/theme/variables.scss
@@ -1,2 +1,4 @@
-// For information on how to create your own theme, please see:
-// http://ionicframework.com/docs/theming/
+:root {
+  --ion-color-primary: #ffcb05; // amarelo Pikachu
+  --ion-color-medium: #d1d1d1;  // cinza mais claro
+}
