--- a/src/app/pages/home/home.page.scss
+++ b/src/app/pages/home/home.page.scss
@@ -6,3 +6,64 @@ ion-card {
     margin: auto;
   }
 }
+// .pokemon-card {
+//   border-radius: 12px;
+//   box-shadow: 0 4px 12px rgba(0, 0, 0, 0.1);
+//   transition: transform 0.2s ease;
+//   cursor: pointer;
+
+//   img {
+//     border-top-left-radius: 12px;
+//     border-top-right-radius: 12px;
+//     width: 100%;
+//     height: auto;
+//     object-fit: cover;
+//   }
+
+//   &:hover {
+//     transform: scale(1.03);
+//   }
+
+//   ion-card-title {
+//     text-align: center;
+//     font-size: 1.1rem;
+//     font-weight: bold;
+//     margin-top: 8px;
+//     color: #2c3e50;
+//   }
+
+//   ion-content {
+//     --background: #f8f9fa;
+//   }
+
+// }
+.pokemon-card {
+  position: relative;
+  overflow: hidden;
+
+  img {
+    width: 100%;
+    height: auto;
+  }
+
+  ion-card-title {
+    text-align: center;
+    font-size: 1rem;
+  }
+
+  .favorite-icon {
+    position: absolute;
+    bottom: 8px;
+    right: 8px;
+    font-size: 22px;
+    z-index: 2;
+  }
+
+  .click-overlay {
+    position: absolute;
+    inset: 0;
+    z-index: 1;
+  }
+}
+
+
